Progress on #113 Update documentation

--- a/src/com/corionis/els/resources/duplicatefinder_en_US.html
+++ b/src/com/corionis/els/resources/duplicatefinder_en_US.html
@@ -38,8 +38,8 @@ Works locally or remotely.
 
 <p>Because ELS and modern media systems span multiple storage devices a duplicate is currently
 defined as the same filename inside the same library directory name. For example: 1922 Nosferatu
-on two different Library sources. It is not a filename-level comparison. Other duplicate comparison
-algorithms may be added in future versions.</p>
+on two different sources of the same Library. It is not a filename-level comparison. Other
+duplicate comparison algorithms may be added in future versions.</p>
 
 <p>This tool will not appear in the Jobs list of available tools.</p>
 
@@ -48,7 +48,7 @@ Normally duplicates are only checked within each library. With cross-check enabl
 checked across all libraries.
 
 <h3>Run button</h3>
-Runs the finder on the selected Browser collection, publisher or subscriber.
+Runs the Duplicate Finder on the selected Browser collection, publisher or subscriber.
 
 <h3>Go button</h3>
 The Go button navigates to the item in the Browser.
