--- a/src/com/corionis/els/resources/emptydirectoryfinder_en_US.html
+++ b/src/com/corionis/els/resources/emptydirectoryfinder_en_US.html
@@ -39,7 +39,7 @@ Works locally or remotely.
 <p>This tool will not appear in the Jobs list of available tools.</p>
 
 <h3>Run button</h3>
-Runs the finder on the selected Browser collection, publisher or subscriber.
+Runs the Empty Directory Finder on the selected Browser collection, publisher or subscriber.
 
 <h3>Delete button</h3>
 Deletes the selected empty directories from the list.
