--- a/src/com/corionis/els/resources/hint-keys_en_US.html
+++ b/src/com/corionis/els/resources/hint-keys_en_US.html
@@ -36,7 +36,7 @@
 <p>Hint Keys control Hint processing and which ELS instances are involved. These may
 include publishers and subscribers.</p>
 
-<p>A Hint Key is the "Key" element from a collection JSON file.<br/><br/></p>
+<p>A Hint Key is the "Key" element from a Library JSON file.<br/><br/></p>
 
 <h3>Key List Button</h3>
 <p>
@@ -49,8 +49,9 @@ include publishers and subscribers.</p>
 <p>
     This option must be defined on the command line with one of the following
     options or in an Operation for them to be used in a Job.
-    <blockquote>-k | --keys [file] or -K | --keys-only [file]</blockquote>
     <br/>
+    <blockquote>-k | --keys [file] or -K | --keys-only [file]</blockquote>
+
     <p>
         The -K | --keys-only option executes Hints and other back-up options, such as --duplicates,
         but does not perform back-up operations.
