--- a/src/com/corionis/els/resources/junkremover_en_US.html
+++ b/src/com/corionis/els/resources/junkremover_en_US.html
@@ -40,7 +40,8 @@ This tool may be applied to:
     <li>Directory</li>
     <li>File</li>
 </ul>
-
+Works locally or remotely.<br/>
+<br/>
 Named configurations may be executed:
 <ul>
     <li>Using the Run button</li>
