--- a/src/com/corionis/els/resources/libraries_en_US.html
+++ b/src/com/corionis/els/resources/libraries_en_US.html
@@ -50,7 +50,7 @@
 
 <ul>
   <li id="opts">Key<br/>
-    A version 4 UUID. Every publisher and subscriber must be a unique key. This key is also used for
+    A version 4 UUID. Every publisher and subscriber must have a unique key. This key is also used for
     Authorization Keys and Hint Keys. Use the "..." button to generate a new key.</li>
 
   <li id="opts">Host<br/>
@@ -124,7 +124,7 @@ default minimum free space is 1 GB.</p>
 <p>&nbsp;</p>
 
 <p>A Target -t|-T file is still supported but is being phased-out in favor of Locations. There is no
-Navigator dialog for editing targets JSON files however they may still be defined on the command-line. Defined minimum free
+Navigator dialog for editing Targets JSON files however they may still be defined on the command-line. Defined minimum free
 space from Targets override Locations.</p>
 
 <p>&nbsp;</p>
