--- a/src/com/corionis/els/resources/renamer_en_US.html
+++ b/src/com/corionis/els/resources/renamer_en_US.html
@@ -48,6 +48,7 @@ Named configurations may be executed:
 <h3>Common Options</h3>
 <ul>
     <li>Recursive, process any selected directories and subdirectories recursively.<br><br></li>
+    <li>Process files only, i.e. do not process directories.<br><br></li>
     <li>The combobox selects which portion of the filename to process.</li>
     <ul>
         <li>Name only, process only the left-side of the filename before the extension.</li>
@@ -55,6 +56,8 @@ Named configurations may be executed:
         <li>Whole filename, process the entire filename.</li>
     </ul>
 </ul>
+
+<p>There are several types of renamers:</p>
 
 <h3>Case change</h3>
 <div>
