--- a/src/com/corionis/els/resources/authentication-keys_en_US.html
+++ b/src/com/corionis/els/resources/authentication-keys_en_US.html
@@ -33,25 +33,26 @@
 </head>
 <body>
 <h2>Authentication Keys</h2>
-<p>Authentication Keys control what ELS instances are allowed to access this ELS listener instance.
-Note a subscriber is the same as a publisher. Their role as a publisher or subscriber is controlled
-by which is defined for the -p|-P and -s|-S options.</p>
+<p>Authentication Keys control what ELS instances are allowed to access this ELS instance when
+operating as a listener. Note a subscriber is the same as a publisher. Their role as a
+publisher or subscriber is controlled by which is defined for the -p|-P and -s|-S options.</p>
 
-<p>Authentication Keys may be used with ELS subscriber and publisher listeners, and are
+<p>Authentication Keys are optional with ELS subscriber and publisher listeners, but are
 <i>required</i> for the Hint Server listener.</p>
 
 <p>If Authentication Keys are not specified the current publisher is used and is the
-only client that may connect to the subscriber.</p>
+only client that may connect to the listener.</p>
 
-<p>An Authentication Key is the "key" element from a collection JSON file.<br/><br/></p>
+<p>An Authentication Key is the "key" element from a Library JSON file.<br/><br/></p>
 
 <h3>UUID List Button</h3>
-<p>The UUID List button presents a list of known collection files and displays the
+<p>The UUID List button presents a list of known Library files and displays the
 "description" and "key" elements from each file found in the ELS libraries/ directory.</p>
+<br/>
 
 <i><b>Note:</b></i>
 <p>This option must be defined on the command line with the <blockquote>-A | --auth-keys [file]</blockquote> option
-or in an Operation for them to be used. These Navigator dialogs only edit the files.</p>
+or in an Operation for the keys to be used. These Navigator dialogs only edit the files.</p>
 
 </body>
 </html>
