#113 Partial completion; minor bugs; working on Updater for Mac

--- a/src/com/corionis/els/resources/gettingstarted_en_US.html
+++ b/src/com/corionis/els/resources/gettingstarted_en_US.html
@@ -78,7 +78,7 @@ and the names and source(s) of each logical library.</p>
 <br/>
 <h3>Remote Subscribers and Hints</h3>
 <p>If a Subscriber is remote or Hints will be used Hint Keys and Authentication Keys are required. Use
-the System menu selections to define those using the keys from the Publisher and Subscriber libraries.</p>
+the System menu selections to define those using the keys from the library files.</p>
 <br/>
 <p>Authentication Keys define Libraries that are allowed to connect to this ELS. Those may include publishers,
 subscribers and Navigators.</p>
@@ -100,8 +100,9 @@ into Jobs.</p>
 for the Publisher, Subscriber, and Hint Server as required. Some Tools also use Origin path lists to
 define exactly what is to be operated on.</p>
 
+<br/>
 <h3>Ways to Execute ELS</h3>
-<p>ELS is a multi-faceted tool that may be executed in a variety of ways.</p>
+<p>ELS is a multi-faceted application that may be executed in a variety of ways.</p>
 
 <h4>From Navigator</h4>
 <p>The provided start-up mechanism for each supported operating system executes the ELS Navigator user
@@ -124,7 +125,7 @@ interface with no arguments. That tells Navigator to use the previous publisher,
 </ul>
 
 <h4>From Command Line</h4>
-<p>ELS may also be exeuted from the command line two ways:</p>
+<p>ELS may also be executed from the command line two ways:</p>
 
 <ul>
     <li>Using either short or long options to define all the arguments needed for an Operation.<br/><br/></li>
@@ -136,6 +137,7 @@ interface with no arguments. That tells Navigator to use the previous publisher,
 -c | --console-level to Off so it only logs to the -d | --debug-level file and not
 stdout to avoid cron error messages.</p>
 
+<br/>
 <h3>Remote Configurations</h3>
 When using remote publishers and/or subscribers the order of execution is:
 <ol>
