--- a/src/com/corionis/els/resources/hints_en_US.html
+++ b/src/com/corionis/els/resources/hints_en_US.html
@@ -59,7 +59,7 @@
 </ol>
 <p>
     When enabled Hints are automatically created when any tracked action is performed on
-    a Library. Hints are not tracked on System tab content.
+    a Collection. Hints are not tracked on System tab content.
 </p>
 <br/>
 <p>
@@ -96,7 +96,7 @@
 </p>
 <br/>
 <p>
-    Hint Track/Server Library keys should <b>not</b> be in Hint Keys.
+    The Hint Track/Server Library key should <b>not</b> be in Hint Keys.
 </p>
 
 <h4>Hint Tracker/Server</h4>
@@ -132,6 +132,8 @@
 
 <br/>
 <i><b>Note:</b></i>
+<br/>
+<br/>
 <p>
     These options must be defined on the command line, or in an Operation that can
     also be used as a Task in a Job.<br/>
