--- a/src/com/corionis/els/resources/operations_en_US.html
+++ b/src/com/corionis/els/resources/operations_en_US.html
@@ -75,9 +75,9 @@
   <li>Local or Remote publish : Back-up based on the Task Origins.</li>
   <li>Subscriber listener : The subscribe-side for remote publish.</li>
   <li>Hint status server : Track manual changes between remote back-up systems.</li>
-  <li>Publisher terminal* : Manual terminal for a remote publisher listener.</li>
-  <li>Publisher listener* : The publisher-side for a publisher terminal.</li>
-  <li>Subscriber terminal* : Manual terminal for a remote subscriber listener.</li>
+  <li>Publisher terminal : Manual terminal for a remote publisher listener.</li>
+  <li>Publisher listener : The publisher-side for a publisher terminal.</li>
+  <li>Subscriber terminal : Manual terminal for a remote subscriber listener.</li>
   <li>Hint server force quit : Force a remote Hint Status Server to quit.</li>
   <li>Subscriber force quit : Force a remote subscriber listener to quit.</li>
 </ul>
@@ -142,7 +142,7 @@ appear depends on the selected mode.</p>
     -G | --listener-quit option.</li>
 
   <li id="opts">Mismatches<br/>
-    -m | --mismatches [output file] : Report mismatches which is a list of differences during back-up operations.</li>
+    -m | --mismatches [output file] : Report mismatches which is a list of Hints processed and content differences during back-up operations.</li>
 
   <li id="opts">Navigator<br/>
     -n | --navigator : Run the ELS Navigator desktop application.</li>
