--- a/src/com/corionis/els/resources/libraries_en_US.html
+++ b/src/com/corionis/els/resources/libraries_en_US.html
@@ -46,11 +46,11 @@
 
 <h3>General Tab</h3>
 <p>The General tab defines the key, communications parameters and other basic options. Different combinations of options are
-  used depending on the role of the repository with the -p|-P or -s|-S options.</p>
+  used depending on the role of the repository: Publisher, Subscriber or Hint Server.</p>
 
 <ul>
   <li id="opts">Key<br/>
-    A version 4 UUID. Every publisher and subscriber must have a unique key. This key is also used for
+    A version 4 UUID. Every library must have a unique key. This key is also used for
     Authorization Keys and Hint Keys. Use the "..." button to generate a new key.</li>
 
   <li id="opts">Host<br/>
@@ -105,7 +105,7 @@ Library sources. Relative partial paths to their length should be contained with
   <h4><i>Examples:</i></h4>
   <table>
     <tr>
-      <th >Locations:</th> <th>Bibliography Sources:</th>
+      <th>Locations:</th> <th>Bibliography Sources:</th>
     </tr>
     <tr>
       <td>D:\Media<br/>E:\Media</td>
@@ -119,7 +119,7 @@ Library sources. Relative partial paths to their length should be contained with
   </table>
 
 <p>If a target for a backup, copy or move operation does not have a matching Location the
-default minimum free space is 1 GB.</p>
+default minimum free space is 10 GB.</p>
 
 <p>&nbsp;</p>
 
@@ -140,7 +140,7 @@ space from Targets override Locations.</p>
 <<p>&nbsp;</p>
 
 <p>The order of the sources defines the order searched for available free space, depending on the
-runtime setting of "Back-fill".</p>
+runtime setting of the "Back-fill" option.</p>
 
 <br/>
 <br/>
