--- a/deploy/changes.html
+++ b/deploy/changes.html
@@ -13,11 +13,16 @@
 
 <hr/>
 
+<h3>11 June 2025</h3>
+<ul>
+    <li>Fixed Job path handling bug.</li>
+</ul>
+
 <h3>5 June 2025</h3>
 <ul>
     <li>Updated internal and Wiki documentation.</li>
     <li>Updated ELS user web site.</li>
-    <li>Fixed bug in Windows luancher ELS-Navigator.exe when starting with no arguments.</li>
+    <li>Fixed bug in Windows launcher ELS-Navigator.exe when starting with no arguments.</li>
     <li>Fixed bug in Mac Update logic.</li>
 </ul>
 
