--- a/src/com/corionis/els/resources/hints_en_US.html
+++ b/src/com/corionis/els/resources/hints_en_US.html
@@ -35,6 +35,10 @@
         ul {
             margin-left: 22px;
         }
+
+        a {
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -75,6 +79,9 @@
     This supports ELS Navigator running on a computer used to create content with a Collection
     as the Subscriber. The Collection may have one or more back-ups all using Hints.
 </p>
+<br/>
+<p>See <a href="https://github.com/Corionis/ELS/wiki/Hints">Hints</a> in the ELS Wiki for
+more information.
 
 <h3>Requirements</h3>
 <p>
