#147 Release of Version 4.0.0.

--- a/src/com/corionis/els/resources/controls_en_US.html
+++ b/src/com/corionis/els/resources/controls_en_US.html
@@ -90,6 +90,12 @@
         <td><br/></td> <td></td>
     </tr>
     <tr>
+        <td colspan="2">&bull; Copy and Move actions (batches) may be added while others are running.</td>
+    </tr>
+    <tr>
+        <td><br/></td> <td></td>
+    </tr>
+    <tr>
         <th>Log Tab:</th> <th>&nbsp;</th>
     </tr>
     <tr>
